--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -281,7 +281,7 @@ h6 {
 }
 
 .scrolled .header {
-  --background-color: rgba(0, 0, 0, 0.85);
+  background-color: rgba(0, 0, 0, 0.85);
   box-shadow: 0px 0 18px rgba(0, 0, 0, 0.9);
 }
 
