--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1180,7 +1180,7 @@ section,
 }
 
 .venue .venue-info {
-  background: url("../img/psc.jpg") center center no-repeat;
+  background: url("../img/venue-gallery/hosp.jpg") center center no-repeat;
   background-size: cover;
   position: relative;
   padding-top: 110px;
