--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1701,4 +1701,8 @@ section,
 --------------------------------------------------------------*/
 .starter-section {
   /* Add your styles here */
+  .team .member-info {
+      text-align: center;
+      padding: 20px;
+    }
 }
